fix: nav-z-index

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -25,7 +25,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    z-index: 10;
+    z-index: 100;
 
 }
 
